--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     ,"lodash":"3.10.1"
     ,"formsy-react": "0.17.0"
     ,"formsy-react-components": "0.6.6"
-
+    ,"tcomb-form" : "0.8.1"
+    ,"react-tagsinput": "3.1.0"
+    ,"react-select": "1.0.0-beta8"
   },
   "private": true
 }
