--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "mantra-demo",
   "version": "0.0.0",
   "scripts": {
-    "lint": "eslint ./libs ./client ./server --ext .js --ext .jsx",
+    "lint": "eslint ./libs ./client ./server --ignore-pattern **/*.min.js  --ext .js --ext .jsx",
+    "lintorg": "eslint ./libs ./client ./server --ext .js --ext .jsx",
     "lintfix": "npm run lint -- --fix",
     "testonly": "mocha client/**/tests/**/*.js --compilers js:babel-core/register",
     "test": "npm run lint && npm run testonly",
