--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "lintfix": "npm run lint -- --fix",
     "testonly": "mocha .scripts/mocha_boot.js client/**/tests/**/*.js --compilers js:babel-core/register",
     "test": "npm run lint && npm run testonly",
-    "test-watch": "npm run testonly -- --watch --watch-extensions js,jsx"
+    "test-watch": "npm run testonly -- --watch --watch-extensions js,jsx",
+    "dsstore": "find . -name '*.DS_Store' -type f -delete"
   },
   "devDependencies": {
     "babel-core": "6.x.x",
@@ -31,6 +32,15 @@
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "react-mounter": "^1.0.0"
+
+    ,"classnames": "2.2.1"
+    ,"lodash":"3.10.1"
+    ,"formsy-react": "0.17.0"
+    ,"formsy-react-components": "0.6.6"
+    ,"tcomb-form" : "0.8.1"
+    ,"react-tagsinput": "3.1.0"
+    ,"react-select": "1.0.0-beta8"
+    
   },
   "private": true
 }
