--- a/package.json
+++ b/package.json
@@ -27,20 +27,20 @@
     "jsdom": "^8.0.4"
   },
   "dependencies": {
+    "classnames": "2.2.1",
     "domready": "^1.0.8",
+    "formsy-react": "0.17.0",
+    "formsy-react-components": "0.6.6",
+    "lodash": "3.10.1",
     "mantra-core": "^1.2.0",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
-    "react-mounter": "^1.0.0"
-
-    ,"classnames": "2.2.1"
-    ,"lodash":"3.10.1"
-    ,"formsy-react": "0.17.0"
-    ,"formsy-react-components": "0.6.6"
-    ,"tcomb-form" : "0.8.1"
-    ,"react-tagsinput": "3.1.0"
-    ,"react-select": "1.0.0-beta8"
-    
+    "react-komposer": "^1.3.2",
+    "react-mounter": "^1.0.0",
+    "react-select": "1.0.0-beta8",
+    "react-simple-di": "^1.0.1",
+    "react-tagsinput": "3.1.0",
+    "tcomb-form": "0.8.1"
   },
   "private": true
 }
