--- a/package.json
+++ b/package.json
@@ -34,7 +34,15 @@
     "mantra-core": "^1.4.0",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
-    "react-mounter": "^1.0.0"
+    "react-mounter": "^1.0.0",
+    "lodash": "4.6.1",
+    "moment": "2.11.2",
+    "react-bootstrap": "0.28.3",
+    "react-select": "0.9.1",
+
+    "formsy-react": "0.17.0",
+    "formsy-react-components": "0.6.6"
+
   },
   "private": true
 }
