--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "devDependencies": {
     "babel-core": "6.x.x",
-    "babel-plugin-react-require": "2.x.x",
+    "babel-plugin-react-require": "3.x.x",
     "babel-polyfill": "6.x.x",
     "babel-preset-es2015": "6.x.x",
     "babel-preset-react": "6.x.x",
@@ -19,27 +19,27 @@
     "babel-root-slash-import": "1.x.x",
     "chai": "3.x.x",
     "enzyme": "^2.0.0",
-    "eslint": "1.10.x",
-    "eslint-plugin-react": "3.15.x",
-    "mocha": "2.x.x",
-    "react-addons-test-utils": "^0.14.6",
+    "eslint": "3.16.x",
+    "eslint-plugin-react": "6.10.x",
+    "mocha": "3.x.x",
+    "react-addons-test-utils": "^15.4.2",
     "sinon": "1.17.x",
-    "jsdom": "^8.0.4"
+    "jsdom": "^9.11.0"
   },
   "dependencies": {
     "domready": "^1.0.8",
     "mantra-core": "^1.2.0",
-    "react": "^0.14.6",
-    "react-dom": "^0.14.6",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
     "react-mounter": "^1.0.0"
 
-    ,"classnames": "2.2.1"
-    ,"lodash":"3.10.1"
-    ,"formsy-react": "0.17.0"
-    ,"formsy-react-components": "0.6.6"
-    ,"tcomb-form" : "0.8.1"
-    ,"react-tagsinput": "3.1.0"
-    ,"react-select": "1.0.0-beta8"
+    ,"classnames": "2.2.5"
+    ,"lodash": "4.17.4"
+    ,"formsy-react": "0.19.2"
+    ,"formsy-react-components": "0.10.1"
+    ,"tcomb-form": "0.9.12"
+    ,"react-tagsinput": "3.15.1"
+    ,"react-select": "1.0.0-rc.3"
     
   },
   "private": true
